Allow RUD operations in config
